# webmvc/example/docs/openapi.yaml
@@ -160,16 +160,16 @@ paths:
                     detail: Invalid request content.
                     instance: /mvc-extended-problem-detail/web-exchange-bind-exception
                     errors:
-                    - type: PARAMETER
+                    - type: MODEL_ATTRIBUTE
                       target: name
                       message: Name length must be between 6-10
-                    - type: PARAMETER
+                    - type: MODEL_ATTRIBUTE
                       target: age
                       message: Age cannot be null
-                    - type: PARAMETER
+                    - type: MODEL_ATTRIBUTE
                       target: password
                       message: Password and confirm password do not match
-                    - type: PARAMETER
+                    - type: MODEL_ATTRIBUTE
                       target: confirmPassword
                       message: Password and confirm password do not match
   /mvc-extended-problem-detail/unsupported-media-type-status-exception:
@@ -257,16 +257,16 @@ paths:
                     detail: Invalid request content.
                     instance: /mvc-extended-problem-detail/method-argument-not-valid-exception
                     errors:
-                    - type: PARAMETER
+                    - type: REQUEST_BODY
                       target: name
                       message: Name length must be between 6-10
-                    - type: PARAMETER
+                    - type: REQUEST_BODY
                       target: age
                       message: Age cannot be null
-                    - type: PARAMETER
+                    - type: REQUEST_BODY
                       target: password
                       message: Password and confirm password do not match
-                    - type: PARAMETER
+                    - type: REQUEST_BODY
                       target: confirmPassword
                       message: Password and confirm password do not match
   /mvc-extended-problem-detail/max-upload-size-exceeded-exception:
@@ -364,7 +364,7 @@ paths:
                     detail: Validation failure
                     instance: /mvc-extended-problem-detail/handler-method-validation-exception-request-body
                     errors:
-                    - type: PARAMETER
+                    - type: REQUEST_BODY
                       target: password
                       message: Password cannot be empty
   /mvc-extended-problem-detail/handler-method-validation-exception-request-body-validation-result:
@@ -403,7 +403,7 @@ paths:
                     detail: Validation failure
                     instance: /mvc-extended-problem-detail/handler-method-validation-exception-request-body-validation-result
                     errors:
-                    - type: PARAMETER
+                    - type: REQUEST_BODY
                       message: Element cannot contain empty values
   /mvc-extended-problem-detail/unsatisfied-servlet-request-parameter-exception:
     get:
@@ -892,7 +892,7 @@ paths:
                     detail: Validation failure
                     instance: /mvc-extended-problem-detail/handler-method-validation-exception-request-part
                     errors:
-                    - type: PARAMETER
+                    - type: REQUEST_PART
                       target: file
                       message: File cannot be empty
   /mvc-extended-problem-detail/handler-method-validation-exception-request-param:
@@ -930,13 +930,13 @@ paths:
                     detail: Validation failure
                     instance: /mvc-extended-problem-detail/handler-method-validation-exception-request-param
                     errors:
-                    - type: PARAMETER
+                    - type: QUERY_PARAMETER
                       target: param
                       message: Parameter cannot be empty
-                    - type: PARAMETER
+                    - type: QUERY_PARAMETER
                       target: param2
                       message: Parameter 2 cannot be null
-                    - type: PARAMETER
+                    - type: QUERY_PARAMETER
                       target: param2
                       message: Parameter 2 cannot be blank
   /mvc-extended-problem-detail/handler-method-validation-exception-request-header:
@@ -1000,7 +1000,7 @@ paths:
                     detail: Validation failure
                     instance: /mvc-extended-problem-detail/handler-method-validation-exception-path-variable/a
                     errors:
-                    - type: PARAMETER
+                    - type: PATH_VARIABLE
                       target: id
                       message: ID minimum length is 2
   /mvc-extended-problem-detail/handler-method-validation-exception-other:
@@ -1065,7 +1065,7 @@ paths:
                     detail: Validation failure
                     instance: /mvc-extended-problem-detail/handler-method-validation-exception-model-attribute
                     errors:
-                    - type: PARAMETER
+                    - type: MODEL_ATTRIBUTE
                       target: password
                       message: Password cannot be empty
   /mvc-extended-problem-detail/handler-method-validation-exception-matrix-variable/{id}:
@@ -1107,7 +1107,7 @@ paths:
                     detail: Validation failure
                     instance: "/mvc-extended-problem-detail/handler-method-validation-exception-matrix-variable/abc;list=a,b,c"
                     errors:
-                    - type: PARAMETER
+                    - type: MATRIX_VARIABLE
                       target: list
                       message: Maximum size is 2
   /mvc-extended-problem-detail/handler-method-validation-exception-cookie-value:
@@ -1408,7 +1408,12 @@ components:
                 type: string
                 description: Source of the error.
                 enum:
-                - PARAMETER
+                - QUERY_PARAMETER
+                - PATH_VARIABLE
+                - REQUEST_BODY
+                - MODEL_ATTRIBUTE
+                - REQUEST_PART
+                - MATRIX_VARIABLE
                 - COOKIE
                 - HEADER
                 - BUSINESS
